--- a/InventoryManagementUI/Views/Company/Product.cshtml
+++ b/InventoryManagementUI/Views/Company/Product.cshtml
@@ -3,15 +3,15 @@
     ViewBag.Title = "Product";
     Layout = "~/Views/Shared/_CompanyLayout.cshtml";
 }
-
+@Html.ActionLink("Add New Product", "AddProduct", "Company", new { @class = "btn btn-success btn-block mg-b-10" })
 <div class="br-section-wrapper">
-    <h6 class="br-section-label">Product DataTable</h6> <div class="w-25">@Html.ActionLink("Add New Product", "AddProduct", "Company", new { @class = "btn btn-success" })</div>
+    <h6 class="br-section-label">Product DataTable</h6>
     <div class="table-wrapper">
         <table id="datatable1" class="table display responsive nowrap dataTable no-footer dtr-inline" role="grid" aria-describedby="datatable1_info" style="width: 935px;">
             <thead>
                 <tr role="row">
                     <th class="wd-15p sorting_asc" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 112px;" aria-sort="ascending" aria-label="First name: activate to sort column descending">BarcodeCode</th>
-                   
+
                     <th class="wd-20p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 175px;" aria-label="Position: activate to sort column ascending">ProductName</th>
                     <th class="wd-15p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 114px;" aria-label="Start date: activate to sort column ascending">Pieces</th>
                     <th class="wd-10p sorting" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 69px;" aria-label="Salary: activate to sort column ascending">Price</th>
@@ -23,18 +23,18 @@
             <tbody>
                 @foreach (var Product in Model)
                 {
-                <tr role="row" class="odd">
-                   
+                    <tr role="row" class="odd">
 
-                    <td class="sorting_1" tabindex="0">@Product.BarcodeCode</td>
-                    <td>@Product.ProductName</td>
 
-                    <td>@Product.Pieces</td>
-                    <td>@Product.Price</td>
-                    <td>@Product.TaxRate</td>
-                    <td>@Html.ActionLink("Edit", "EditProduct", "Company", new { Product.Id }, new { @class = "btn btn-teal" })</td>
-                    <td>@Html.ActionLink("Detail", "DetailProduct", "Company", new { Product.Id }, new { @class = "btn btn-danger" })</td>
-                </tr>
+                        <td class="sorting_1" tabindex="0">@Product.BarcodeCode</td>
+                        <td>@Product.ProductName</td>
+
+                        <td>@Product.Pieces</td>
+                        <td>@Product.Price</td>
+                        <td>@Product.TaxRate</td>
+                        <td>@Html.ActionLink("Edit", "EditProduct", "Company", new { Product.Id }, new { @class = "btn btn-teal" })</td>
+                        <td>@Html.ActionLink("Detail", "DetailProduct", "Company", new { Product.Id }, new { @class = "btn btn-info" })</td>
+                    </tr>
                 }
 
 
@@ -53,5 +53,9 @@
             lengthMenu: '_MENU_ items/page',
         }
     });
+
+
+
+
 </script>
 
