--- a/InventoryManagementUI/Views/Company/Index.cshtml
+++ b/InventoryManagementUI/Views/Company/Index.cshtml
@@ -65,7 +65,7 @@
 <div class="br-section-wrapper">
      <h6 class="br-section-label">Staff DataTable</h6> @Html.ActionLink("Create New Staff", "CreateStaff", "Company", new { @class = "btn btn-success" })
     <div class="table-wrapper">
-        <table id="datatable1" class="table display responsive nowrap dataTable no-footer dtr-inline" role="grid" aria-describedby="datatable1_info" style="width: 935px;">
+        <table id="datatable1" class="table display responsive nowrap dataTable no-footer dtr-inline" role="grid" aria-describedby="datatable1_info">
             <thead>
                 <tr role="row">
                     <th class="wd-15p sorting_asc" tabindex="0" aria-controls="datatable1" rowspan="1" colspan="1" style="width: 112px;" aria-sort="ascending" aria-label="First name: activate to sort column descending">Name</th>
