--- a/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
+++ b/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
@@ -126,18 +126,18 @@
             <div class="dropdown">
                 <a href="#" class="nav-link nav-link-profile wd-150" data-toggle="dropdown" aria-expanded="false">
                     <!--Şirket Adı ve Yetkili Kişi Adı-->
-                    <span class="logged-name hidden-md-down">Katherine</span>
+                    <span class="logged-name hidden-md-down tx-sm-8">@Session["CompanyName"]</span>
                     <!--Şirket Logosu Gelicek-->
-                    <img src="~/Content/img/img1.jpg" class="wd-32 rounded-circle" alt="">
+                    <img src="~/Content/CompanyLogo/@Session["CompanyLogo"]" class="wd-32 rounded-circle" alt="">
 
                 </a>
                 <div class="dropdown-menu dropdown-menu-header" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 48px, 0px); top: 0px; left: 0px; will-change: transform;">
                     <div class="tx-center">
                         <!--Şirket Logosu Gelicek-->
-                        <a href="#"><img src="~/Content/img/img1.jpg" class="wd-80 rounded-circle" alt=""></a>
+                        <a href="#"><img src="~/Content/CompanyLogo/@Session["CompanyLogo"]" class="wd-80 rounded-circle" alt=""></a>
                         <!--Şirket Adı-->
-                        <h6 class="logged-fullname">Katherine P. Lumaad</h6>
-                        <p>youremail@domain.com</p>
+                        <h6 class="logged-fullname">@Session["CompanyName"]</h6>
+                        <p>@Session["TaxNumber"]</p>
                     </div>
                     <hr>
                     <div class="tx-center">
@@ -148,9 +148,13 @@
                     <hr>
                     <ul class="list-unstyled user-profile-nav">
                         <li>
-                            <a href="~/Company/EditCompanyProfile/@Session["Id"]">
-                                <i><img src="~/Content/img/resume.png" /></i>&nbsp;<b>Edit Company Profile</b>
-                            </a>
+                            @{ 
+                                int Id = (int)Session["Id"];
+                            
+                            <i>
+<img src="~/Content/img/resume.png" /></i>   @Html.ActionLink("EditProfil", "EditCompanyProfile", "Company",new {Id},new {@class=""})
+
+                           }
                         </li>
                         <li><a href="#">----</a></li>
                         <li><a href="#">----</a></li>
