--- a/InventoryManagementUI/Views/Company/Index.cshtml
+++ b/InventoryManagementUI/Views/Company/Index.cshtml
@@ -63,7 +63,8 @@
 </div>
 
 <div class="br-section-wrapper">
-     <h6 class="br-section-label">Staff DataTable</h6> @Html.ActionLink("Create New Staff", "CreateStaff", "Company", new { @class = "btn btn-success" })
+    @Html.ActionLink("Create New Staff", "CreateStaff", "Company", new { @class = "btn btn-success btn-block mg-b-10 tx-sm-bold" })
+    <h6 class="br-section-label">Staff DataTable</h6>
     <div class="table-wrapper">
         <table id="datatable1" class="table display responsive nowrap dataTable no-footer dtr-inline" role="grid" aria-describedby="datatable1_info">
             <thead>
