--- a/InventoryManagementUI/Content/fontIcon/_flaticon.scss
+++ b/InventoryManagementUI/Content/fontIcon/_flaticon.scss
@@ -41,6 +41,9 @@
 .flaticon-home:before { content: "\f101"; }
 .flaticon-mail:before { content: "\f102"; }
 .flaticon-product:before { content: "\f103"; }
+.flaticon-store:before {
+    content: "\f103";
+}
 .flaticon-staff:before { content: "\f104"; }
 .flaticon-menu:before { content: "\f105"; }
     
@@ -48,5 +51,6 @@
     $font-Flaticon-home: "\f101";
     $font-Flaticon-mail: "\f102";
     $font-Flaticon-product: "\f103";
+$font-Flaticon-store: "\f103";
     $font-Flaticon-staff: "\f104";
     $font-Flaticon-menu: "\f105";
