--- a/InventoryManagementUI/Content/fontIcon/flaticon.css
+++ b/InventoryManagementUI/Content/fontIcon/flaticon.css
@@ -34,6 +34,9 @@ margin-left: -1px;
 .flaticon-Product:before {
     content: "\f103";
 }
+.flaticon-Store:before {
+    content: "\f103";
+}
 
 .flaticon-Staff:before {
     content: "\f104";
