--- a/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
+++ b/InventoryManagementUI/Views/Shared/_CompanyLayout.cshtml
@@ -16,6 +16,10 @@
             color: #fff;
           }
 
+        *{
+            font-family:Arial, Helvetica, sans-serif;
+        }
+
     </style>
 
     <!-- Meta -->
@@ -148,19 +152,20 @@
                     <hr>
                     <ul class="list-unstyled user-profile-nav">
                         <li>
-                            @{ 
+                            @{
                                 int Id = (int)Session["Id"];
-                            
-                            <i>
-<img src="~/Content/img/resume.png" /></i>   @Html.ActionLink("EditProfil", "EditCompanyProfile", "Company",new {Id},new {@class=""})
 
-                           }
+                               
+                                   @Html.ActionLink("Edit Profile", "EditCompanyProfile", "Company", new { Id }, new { @class = "btn btn-info btn-block mg-b-10 tx-sm-bold" })
+                               
+
+                            }
                         </li>
-                        <li><a href="#">----</a></li>
-                        <li><a href="#">----</a></li>
-                        <li><a href="#">----</a></li>
-                        <li><a href="#">----</a></li>
-                        <li> <a href="~/Account/SignOut" class="btn btn-danger btn-block mg-r-20">SignOut</a></li>
+                        <li><a href="#" class="btn btn-teal btn-block mg-b-10 tx-sm-bold">Notification</a></li>
+                        <li><a href="#" class="btn btn-purple btn-block mg-b-10 tx-sm-bold">----</a></li>
+                        <li><a href="#" class="btn btn-pink btn-block mg-b-10 tx-sm-bold">----</a></li>
+                        <li><a href="#" class="btn btn-warning btn-block mg-b-10 tx-sm-bold">----</a></li>
+                        <li> <a href="~/Account/SignOut" class="btn btn-danger btn-block mg-r-20 tx-sm-bold">SignOut</a></li>
                     </ul>
                 </div><!-- dropdown-menu end -->
             </div>
